plugins {
	id 'org.springframework.boot' version '2.2.6.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'com.github.node-gradle.node' version '2.2.3'
	id 'java'
}

group = 'net.ddns.rarnold'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

bootJar {
	archiveFileName = 'app.jar'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}

npm_run_build {
	inputs.files fileTree('src/main/resources-preprocessed')
	inputs.file 'package.json'
	outputs.dir 'src/main/resources/static'
}

processResources.shouldRunAfter npm_run_build
build.dependsOn npm_run_build
